cf_analysis_results/checkerframework_results/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8.txt
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/data/Test.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-243 $$ java.io.FileReader $$ possible exceptional exit due to db.readLine() with exception type java.io.IOException $$ ( 391, 416 ) $$ @MustCall method close may not have been invoked on temp-var-243 or any of its aliases.
	      BufferedReader db = new BufferedReader(new FileReader("test.db"));
	                                             ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to db.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/data/Test.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-251 $$ java.io.FileReader $$ possible exceptional exit due to sql.readLine() with exception type java.io.IOException $$ ( 691, 717 ) $$ @MustCall method close may not have been invoked on temp-var-251 or any of its aliases.
	        BufferedReader sql = new BufferedReader(new FileReader("test.sql")); 
	                                                ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to sql.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/MqlParser.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-333 $$ java.io.FileInputStream $$ regular method exit $$ ( 1453, 1481 ) $$ @MustCall method close may not have been invoked on temp-var-333 or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/parser/MysgbdParser.java:27: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-364 $$ java.io.FileInputStream $$ regular method exit $$ ( 603, 631 ) $$ @MustCall method close may not have been invoked on temp-var-364 or any of its aliases.
                          new FileInputStream(args[0]))) ;
                          ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/NextPage.java:19: error: (required.method.not.called) $$ 4 $$ method close $$ taos $$ Demo.TextAreaOutputStream $$ regular method exit $$ ( 422, 492 ) $$ @MustCall method close may not have been invoked on taos or any of its aliases.
		TextAreaOutputStream taos = new TextAreaOutputStream(tAout, "Output");
		                     ^
  The type of object is: Demo.TextAreaOutputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/PreparedDemo.java:42: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1355 $$ java.io.FileInputStream $$ regular method exit $$ ( 1187, 1215 ) $$ @MustCall method close may not have been invoked on temp-var-1355 or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/CustomFct.java:45: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1525 $$ java.io.FileInputStream $$ regular method exit $$ ( 1460, 1488 ) $$ @MustCall method close may not have been invoked on temp-var-1525 or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/CheckRowNum.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ si $$ java.io.StringBufferInputStream $$ possible exceptional exit due to par.readStatement() with exception type org.sgbd.Mysgbd.parser.ParseException $$ ( 917, 982 ) $$ @MustCall method close may not have been invoked on si or any of its aliases.
      StringBufferInputStream si = new StringBufferInputStream( sSql );
                              ^
  The type of object is: java.io.StringBufferInputStream.
  Reason for going out of scope: possible exceptional exit due to par.readStatement() with exception type org.sgbd.Mysgbd.parser.ParseException
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/MDemo.java:69: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1565 $$ java.io.FileInputStream $$ regular method exit $$ ( 2074, 2102 ) $$ @MustCall method close may not have been invoked on temp-var-1565 or any of its aliases.
				p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
				                                      ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/MDemo.java:109: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1580 $$ java.io.FileReader $$ possible exceptional exit due to db.readLine() with exception type java.io.IOException $$ ( 3164, 3208 ) $$ @MustCall method close may not have been invoked on temp-var-1580 or any of its aliases.
		BufferedReader db = new BufferedReader(new FileReader(table.getTable()
		                                       ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to db.readLine() with exception type java.io.IOException
Note: ../../../../datasets/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/CheckRowNum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
